vlib/v/parser/tests/fn_arg_variadic_mut_err.vv
fn load(mut filepaths ...string) {
	println(filepaths[0])
}
